--- a/src/puzzles/styles/_palette.scss
+++ b/src/puzzles/styles/_palette.scss
@@ -5,5 +5,5 @@ $colorLightGreen: #A5FFC7; //rgba(107, 178, 160, 100)
 $colorMiddleGreen: #11DB8D; //rgba(165, 255, 214, 100)
 $colorDarkGreen: #2DB773; //rgba(165, 255, 214, 100)
 $colorLightRed: #ffa69e; //rgba(255, 166, 158, 100)
-$colorMiddlekRed: #FF7777; //rgba(255, 104, 104, 100)
+$colorMiddleRed: #FF7777; //rgba(255, 104, 104, 100)
 $colorDarkRed: #FF5154; //rgba(255, 104, 104, 100)
