Update for test

--- a/src/puzzles/styles/_common.scss
+++ b/src/puzzles/styles/_common.scss
@@ -1,4 +1,6 @@
-$fontFamily: Roboto, sans-serif;
+@import url(https://fonts.googleapis.com/css?family=Roboto);
+
+$fontFamily: 'Roboto', sans-serif;
 
 .puzzle-container {
   height: 100%;
