Rework for react

--- a/src/components/puzzles/styles/_common.scss
+++ b/src/components/puzzles/styles/_common.scss
@@ -3,14 +3,13 @@
 $fontFamily: 'Roboto', sans-serif;
 
 .puzzle-container {
-  height: 100%;
+  height: auto;
   width: 100%;
 
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  margin-top: 20px;
 
-  margin: auto;
+  svg {
+    height: 100%;
+    width: 100%;
+  }
 }
