add navigate panel and reset feature

--- a/src/components/puzzles/styles/_common.scss
+++ b/src/components/puzzles/styles/_common.scss
@@ -1,6 +1,25 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto);
+@import "palette";
+
 
 $fontFamily: 'Roboto', sans-serif;
+
+body {
+  background-color: $colorGrey;
+  padding-top: 70px;
+}
+
+.navbar {
+  background-color: $color-blue-1;
+  * {
+    color: $color-blue-4 !important;
+  }
+
+  .navbar-btn {
+    background-color: $color-blue-2;
+  }
+
+}
 
 .puzzle-container {
   height: auto;
