--- a/src/components/puzzles/styles/_palette.scss
+++ b/src/components/puzzles/styles/_palette.scss
@@ -7,3 +7,9 @@ $colorDarkGreen: #2DB773; //rgba(165, 255, 214, 100)
 $colorLightRed: #ffa69e; //rgba(255, 166, 158, 100)
 $colorMiddleRed: #FF7777; //rgba(255, 104, 104, 100)
 $colorDarkRed: #FF5154; //rgba(255, 104, 104, 100)
+
+$color-blue-0: #22A7C7;	// Main Primary color */
+$color-blue-1: #84D3E5;
+$color-blue-2: #4BBAD4;
+$color-blue-3: #0494B6;
+$color-blue-4: #036177;
