--- a/src/components/puzzles/styles/_common.scss
+++ b/src/components/puzzles/styles/_common.scss
@@ -10,13 +10,13 @@ body {
 }
 
 .navbar {
-  background-color: $color-blue-1;
+  background-color: $color-work-1;
   * {
-    color: $color-blue-4 !important;
+    color: $color-work-4 !important;
   }
 
   .navbar-btn {
-    background-color: $color-blue-2;
+    background-color: $color-work-2;
   }
 
 }
