--- a/src/components/puzzles/styles/_palette.scss
+++ b/src/components/puzzles/styles/_palette.scss
@@ -8,8 +8,26 @@ $colorLightRed: #ffa69e; //rgba(255, 166, 158, 100)
 $colorMiddleRed: #FF7777; //rgba(255, 104, 104, 100)
 $colorDarkRed: #FF5154; //rgba(255, 104, 104, 100)
 
-$color-blue-0: #22A7C7;	// Main Primary color */
-$color-blue-1: #84D3E5;
-$color-blue-2: #4BBAD4;
-$color-blue-3: #0494B6;
-$color-blue-4: #036177;
+$color-warning-0: #FF8B00;	// Main warning color */
+$color-warning-1: #FFCC90;
+$color-warning-2: #FFA030;
+$color-warning-3: #E57D00;
+$color-warning-4: #854800;
+
+$color-calm-0: #00F061;	// Main Secondary color (1) */
+$color-calm-1: #88F3B3;
+$color-calm-2: #39F083;
+$color-calm-3: #00C14E;
+$color-calm-4: #007B32;
+
+$color-danger-0: #FF4E24;	// Main Secondary color (2) */
+$color-danger-1: #FFC7BA;
+$color-danger-2: #FF8264;
+$color-danger-3: #FF3100;
+$color-danger-4: #DB2A00;
+
+$color-work-0: #1792D5;	// Main work color */
+$color-work-1: #C3DDEB;
+$color-work-2: #55A8D4;
+$color-work-3: #036DA6;
+$color-work-4: #01486F;
