--- a/src/components/puzzles/styles/_common.scss
+++ b/src/components/puzzles/styles/_common.scss
@@ -13,6 +13,11 @@ body {
   background-color: $color-work-1;
   * {
     color: $color-work-4 !important;
+    font-size: 18px !important;
+  }
+
+  .navbar-brand {
+    font-size: 30px !important;
   }
 
   .navbar-btn {
